--- a/EscapeGame/Properties/Resources.resx
+++ b/EscapeGame/Properties/Resources.resx
@@ -133,4 +133,16 @@
   <data name="Scss" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SCSS.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\background.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Church" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Curch.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Court_House" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Court_House.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="KO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
