--- a/EscapeGame/Properties/Resources.resx
+++ b/EscapeGame/Properties/Resources.resx
@@ -145,4 +145,10 @@
   <data name="KO" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\KO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Boxing_arena_sound_Samantha_Enrico_246597508" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Boxing_arena_sound-Samantha_Enrico-246597508.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Many_Punches_SoundBible_com_1623072177" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Many Punches-SoundBible.com-1623072177.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
